--- a/Practica2/Makefile
+++ b/Practica2/Makefile
@@ -3,7 +3,8 @@ server: main.c server.c defaults.h server.h tcp.c tcp.h debug.h
 	gcc server.c tcp.c main.c  -I /home/nova/socketsProgramming/Practica1 -o server.o
 
 clean: 
-	rm server.o
+	rm serverUPD
+	rm clientUDP
 
 		
 	
